# zem_project

./: .dockerignore  .env.vps.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  c3e48d547507_document_pipeline_tables.py
apps/api/docker/: entrypoint.sh
apps/api/src/buildlaw_api/: __init__.py  main.py
apps/api/src/buildlaw_api/api/: deps.py
apps/api/src/buildlaw_api/api/v1/: router.py
apps/api/src/buildlaw_api/core/: config.py  security.py
apps/api/src/buildlaw_api/db/: session.py
apps/api/src/buildlaw_api/domains/analysis/: __init__.py
apps/api/src/buildlaw_api/domains/billing/: __init__.py
apps/api/src/buildlaw_api/models/: __init__.py  document.py  document_page.py  enums.py  membership.py  organization.py  user.py
apps/api/src/buildlaw_api/schemas/: __init__.py  auth.py  document.py  organization.py  user.py
apps/api/src/buildlaw_api/services/: __init__.py  auth_service.py  document_service.py  membership_service.py  organization_service.py  queue_service.py  storage_service.py
apps/api/tests/: conftest.py  test_documents_api.py  test_health.py  test_openapi.py  test_security.py
apps/worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/src/buildlaw_worker/: __init__.py  config.py  db.py  jobs.py  logging.py  storage.py
apps/worker/src/buildlaw_worker/ocr/: base.py  mock.py
docker/: render-entrypoint.sh
(+26 files in other folders)
